
New features
------------

* PR#202: Allow "." and "~" prefixed references in ``:param:`` doc fields
  for Python.

* #925: Allow list-typed config values to be provided on the command line,
  like ``-D key=val1,val2``.

* #668: Allow line numbering of ``code-block`` and ``literalinclude`` directives
  to start at an arbitrary line number, with a new ``lineno-start`` option.

Bugs fixed
----------

* #1335: Fix autosummary template overloading with exclamation prefix like
  ``{% extends "!autosummary/class.rst" %}`` cause infinite recursive function
  call. This caused by PR#181.

* #1337: Fix autodoc with ``autoclass_content="both"`` uses useless
  ``object.__init__`` docstring when class does not have ``__init__``.
  This caused by a change for #1138.

* #1340: Can't search alphabetical words on the HTML quick search generated
  with language='ja'.

* #1319: Do not crash if the ``html_logo`` file does not exist.

* #603: Do not use the HTML-ized title for building the search index (that
  resulted in "literal" being found on every page with a literal in the
  title).

* #751: Allow production lists longer than a page in LaTeX by using longtable.

* #764: Always look for stopwords lowercased in JS search.

* #814: autodoc: Guard against strange type objects that don't have
  ``__bases__``.

* #932: autodoc: Do not crash if ``__doc__`` is not a string.

* #933: Do not crash if an ``:option:`` value is malformed (contains spaces
  but no option name).

* #908: On Python 3, handle error messages from LaTeX correctly in the pngmath
  extension.

* #943: In autosummary, recognize "first sentences" to pull from the docstring
  if they contain uppercase letters.

* #923: Take the entire LaTeX document into account when caching
  pngmath-generated images.  This rebuilds them correctly when
  ``pngmath_latex_preamble`` changes.

* #901: Emit a warning when using docutils' new "math" markup without a Sphinx
  math extension active.
